<resources>

    <string name="app_name">Pobiegne Tracker</string>
    
    <!-- Common -->
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="cancel">Anuluj</string>
    <string name="settings">Ustawienia</string>
    
    <!-- Menu -->
    <string name="menu_workout">Trening</string>
    <string name="menu_history">Historia</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_exit">Wyjście</string>
    
    <!-- Service -->
    <string name="notificationContent">Jest uruchomiony, aby zamknąć wejdź do aplikacji i skorzystaj z menu.</string>
    <string name="notificationTicker">Pobiegne Tracker uruchomiony.</string>
    
    <!-- Alerty -->
    <string name="gpsServiceTitle">Włączanie GPS</string>
    <string name="gpsServiceContent">Odbiornik GPS jest wyłączony. Czy chcesz przejść do menu ustawień?</string>
    <string name="confirmExit">Czy na pewno chcesz opuścić aplikację?</string>
    <string name="numberSelect">Wybierz wartość:</string>
    <string name="errorNumberPicker">Nie można zmienić wartości pola.</string>
    <string name="routeSaving">Zapiswyanie trasy ...</string>
    <string name="routeLoading">Wczytywanie trasy ...</string>
    <string name="routeDelete">Uwsuwanie trasy</string>
    <string name="routeDeleteConfirm">Czy na pewno chcesz usunąć wybraną trasę?</string>
    <string name="routeDeleted">Trasa została usunięta.</string>
    <string name="routeDeletionError">Błąd podczas usuwania trasy.</string>
    
    <!-- Trening -->
    <string name="workout">Trening</string>
    <string name="history">Historia</string>
    <string name="gps">GPS:</string>
    <string name="ok">OK</string>
    <string name="not_available">BRAK</string>
    <string name="km">km</string>
    <string name="kmph">km/h</string>
    <string name="minpkm">min/km</string>
    <string name="mnpm">m n.p.n.</string>
    <string name="target">Cel</string>
    <string name="workoutTime">Czas treningu</string>
    <string name="burnCalories">Spalone kalorie</string>
    <string name="currentPace">Bieżące tempo</string>
    <string name="currentSpeed">Bieżąca prędkość</string>
    <string name="averagePace">Średnie tempo</string>
    <string name="averageSpeed">Średnia prędkość</string>
    <string name="altitude">Wysokość</string>
    <string name="currentTime">Aktualny czas</string>
    <string name="activity">Rodzaj aktywności</string>
    <string name="workoutType">Typ treningu</string>
    <string name="stop">STOP</string>
    <string name="pause">PAUZA</string>
    <string name="resume">WZNÓW</string>
    <string name="startDistance">0.000</string>
    <string name="startValue">-</string>
    <string name="startTime">--:--</string>

    <!-- Rodzaje aktywnosci -->
    <string name="running">bieganie</string>    <string name="cycling">rower</string>    <string name="hiking">wspinaczka</string>    <string name="walking">spacer</string>
    
    <!-- Profil -->
    <string name="birthday">Data urodzenia</string>
    <string name="sex">Płeć</string>
    <string name="height">Wzrost</string>
    <string name="weight">Waga</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    
    <!-- Szczegoly -->
    <string name="map">MAPA</string>
    <string name="details">SZCZAGÓŁY</string>
    <string name="detailsTitle">Szczegóły treningu</string>
    <string name="deleteWorkout">Usuń trening</string>
    <string name="saveWorkout">Zapisz do pliku</string>
    <string name="saveError">Nie udało się zapisać treningu.</string>
    <string name="saveDone">Zapisano na karcie pamięci w folderze pobiegne.</string>
    <string name="sendDone">Pomyślnie wysłana na pobiegne.pl</string>
    <string name="sendWorkout">Wyślij na pobiegne.pl</string>
    <string name="sendError">Błąd podczas wysyłąnia na serwer.</string>

    <string name="nordic">nordic walking</string>    <string name="aerobic">aerobowy</string>    <string name="interval">interwałowy</string>    <string name="start">Rozpocznij trening</string>    <string name="gpsDisabled">Odbiornik GPS nie jest włączony.</string>    <string name="header_distance">Łączny dystans</string>    <string name="header_time">Łączny czas</string>    <string name="header_calories">Spalone kalorie</string>
</resources>